fix: Add scrollability on small-height devices

--- a/client/html_mockup.css
+++ b/client/html_mockup.css
@@ -18,6 +18,7 @@ body {
   width: 100%;
   height: 100%;
   min-width: fit-content;
+  min-height: fit-content;
 }
 
 #game-area {
